updated to use cookies and https